fix file loader

--- a/public/site.css
+++ b/public/site.css
@@ -4,3 +4,13 @@
 .secret-text {
   max-width: 370px;
 }
+.file-loader {
+  position: relative;
+}
+.file-loader input[type="file"] {
+  width: 50px;
+  left: 0;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
