--- a/public/site.less
+++ b/public/site.less
@@ -5,3 +5,15 @@
 .secret-text {
   max-width: 370px;
 }
+
+.file-loader {
+  position: relative;
+
+  input[type="file"] {
+    width: 50px;
+    left: 0;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+}
